# p-REDbloodDON

./: .pre-commit-config.yaml  EDA.ipynb  README.md  preprocesamiento.ipynb  pyproject.toml
core/: app.py
core/templates/: index.html
data/: serie_modelo.csv
docs/: DATA.md
notebooks/: 1_eda_and_preprocessing.ipynb  1_preprocessing.ipynb
