[project]
name = "buscando_nombre"
version = "0.1.0"
description = "nusca"
readme = "README.md"
requires-python = "~=3.13.0"
authors = [
    { name = "Jerónimo Hoyos Botero" },
    { name = "Daniel Arango Sohm" },
]
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
]

